examples/valid/test04.alice
The looking-glass hatta ()
opened
  x was a number.
  "Please enter a number: " said Alice.
  what was x?
  x said Alice.
closed

